meja/tests/module_hiding_constructor.meja
module A = {
  type t = X;
};

module B = {
  module A = {
    type u = Y;
  };
};

open B;

let x = A.Y;

/* Expect an error, A should be out of scope. */
let y = A.X;
